--- a/modules/ustories/client/views/view-ustory.client.view.html
+++ b/modules/ustories/client/views/view-ustory.client.view.html
@@ -2,6 +2,8 @@
   <div class="page-header">
     <h1 data-ng-bind="vm.ustory.name"></h1>
   </div>
+        <p data-ng-bind="vm.ustory.description"></p>
+
   <div class="pull-right"
        data-ng-show="vm.ustory.isCurrentUserOwner">
     <a class="btn btn-primary"
