--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -1,16 +1,17 @@
 <md-toolbar scroll ng-controller="HeaderController">
         <div class="md-toolbar-tools">
-            <md-button class="md-icon-button" aria-label="Menu" ng-click="toggleLeft()" hide-gt-sm>
-                <md-icon><i class="material-icons">menu</i></md-icon>
-            </md-button>
+            
             <h2>
           <a ui-sref="home" >Planning Poker</a>
         </h2>
+            <md-button class="md-raised md-accent" ui-sref="games.create" ui-sref-active="active" ng-show="authentication.user">
+                New Game
+            </md-button>
             <span flex></span>
-            <md-button ui-sref="authentication.signup" ui-sref-active="active" ng-hide="authentication.user" hide-sm hide-xs>
+            <md-button ui-sref="authentication.signup" ui-sref-active="active" ng-hide="authentication.user">
                 Sign up
             </md-button>
-            <md-button class="md-raised" ui-sref="authentication.signin" ui-sref-active="active" ng-hide="authentication.user" hide-sm hide-xs>
+            <md-button class="md-raised" ui-sref="authentication.signin" ui-sref-active="active" ng-hide="authentication.user">
                 Sign in
             </md-button>
 
@@ -42,20 +43,3 @@
 
         </div>
     </md-toolbar>
-    
-    <md-sidenav scroll class="md-sidenav-left md-whiteframe-z2" md-component-id="left">
-      <md-toolbar class="md-tall md-theme-indigo">
-        <h1 class="md-toolbar-tools md-toolbar-tools-bottom">
-          <span class="md-flex">Sidenav Left</span>
-        </h1>
-      </md-toolbar>
-      <md-content layout-padding ng-controller="LeftCtrl">
-        <md-button ng-click="close()" class="md-primary" hide-gt-md>
-          Close Sidenav Left
-        </md-button>
-        <p hide-md show-gt-md>
-          This sidenav is locked open on your device. To go back to the default behavior,
-          narrow your display.
-        </p>
-      </md-content>
-    </md-sidenav>
