--- a/modules/users/client/views/settings/change-password.client.view.html
+++ b/modules/users/client/views/settings/change-password.client.view.html
@@ -21,7 +21,7 @@
         </div>
         <div class="form-group" show-errors>
           <label for="verifyPassword">Verify Password</label>
-          <input type="password" id="verifyPassword" name="verifyPassword" class="form-control" ng-model="passwordDetails.verifyPassword" placeholder="Verify Password" password-verify="passwordDetails.newPassword" required>
+          <input type="password" id="verifyPassword" name="verifyPassword" class="form-control" ng-model="passwordDetails.verifyPassword" placeholder="Verify Password"  required><!-- password-verify="passwordDetails.newPassword" -->
           <div ng-messages="passwordForm.verifyPassword.$error" role="alert">
             <p class="help-block error-text" ng-message="required">Verify your new password.</p>
             <p class="help-block error-text" ng-show=passwordForm.verifyPassword.$error.passwordVerify>Passwords do not match.</p>
