improved play controller

--- a/modules/games/client/views/view-game.client.view.html
+++ b/modules/games/client/views/view-game.client.view.html
@@ -20,6 +20,9 @@
             
               <label>Description:</label>
               <p data-ng-bind="ustory.description"></p>
+
+              <label>Value:</label>
+              <p data-ng-bind="ustory.values[0].value"></p>
             
           </div>
         </md-whiteframe>
