--- a/modules/games/client/views/play.client.view.html
+++ b/modules/games/client/views/play.client.view.html
@@ -16,7 +16,7 @@
 
  <div>
           <md-button class="md-raised md-accent" ng-hide="ustories[actual+1]==ustories.lenght" ng-disabled="!selectedCard" ng-click="nextUstory()">Next</md-button>
-          <md-button class="md-raised md-accent" ng-show="ustories[actual+1]==ustories.lenght" ng-disabled="!selectedCard" ng-click="nextUstory()" ui-sref="games.view({ gameId: vm.game._id })">Finish</md-button>
+          <md-button class="md-raised md-accent" ng-show="ustories[actual+1]==ustories.lenght" ng-disabled="!selectedCard" ng-click="finish()" ui-sref="games.view({ gameId: vm.game._id })">Finish</md-button>
         </div>
 
  </section>
