--- a/modules/games/client/views/list-games.client.view.html
+++ b/modules/games/client/views/list-games.client.view.html
@@ -9,7 +9,7 @@
     <div layout="column">
       <h3 data-ng-bind="game.name"></h3>
       <p>
-        Posted on
+        Created on
         <span data-ng-bind="game.created | date:'mediumDate'"></span>
         by
         <span data-ng-if="game.user" data-ng-bind="game.user.displayName"></span>
