Beautify some stuff

--- a/modules/core/server/views/layout.server.view.html
+++ b/modules/core/server/views/layout.server.view.html
@@ -37,7 +37,7 @@
 
 <body class="ng-cloak">
   <header ng-include="'/modules/core/client/views/header.client.view.html'"></header>
-  <md-content flex>
+  <md-content flex class="md-padding">
   <section class="content">
     <section class="container">
       {% block content %}{% endblock %}
