--- a/modules/games/client/views/form-game.client.view.html
+++ b/modules/games/client/views/form-game.client.view.html
@@ -1,98 +1,90 @@
 <section>
-  <div class="page-header">
-    <h1>{{vm.game._id ? 'Edit Game' : 'New Game'}}</h1>
-  </div>
-  <div>
-    <form name="vm.form.gameForm"ng-submit="vm.save(vm.form.gameForm.$valid)">
-      
-        <md-input-container>
-        <label>Name</label>
-        <input required name="name" type="text" ng-model="vm.game.name" id="name">
-        
-      </md-input-container>
-      <br>
-        <label>Players:</label>
-        <br>
-        
-    <md-content class="md-padding autocomplete" layout="column">
-     
-    <md-contact-chips
-        ng-model="vm.selectedPlayers"
-        md-contacts="vm.delayedQuerySearch($query)"
-        md-contact-name="username"
-        md-contact-image="profileImageURL"
-        md-contact-email="email"
-        md-require-match="true"
-        md-highlight-flags="i"
-        filter-selected="vm.filterSelected"
-        placeholder="Add Players"
-        secondary-placeholder="Add more Players">
-    </md-contact-chips>
-    </md-content>
+    <div class="page-header">
+        <h1>{{vm.game._id ? 'Edit Game' : 'New Game'}}</h1>
+    </div>
+    <div>
+        <form name="vm.form.gameForm" ng-submit="vm.save(vm.form.gameForm.$valid)">
 
-        <div> <!-- data-ng-controller="UstoriesController" -->
-    <!-- your view content -->
-        <label>User stories:</label>
-        
-        <div layout="row" layout-padding layout-wrap layout-fill>
-
-        
-
-
-        <md-whiteframe class="md-whiteframe-5dp ustory" ng-repeat="ustory in ustories">
-          <div layout="column">
             <md-input-container>
-              <label>Name</label>
-              <input required type="text" ng-model="ustory.name">
+                <label>Name</label>
+                <input required name="name" type="text" ng-model="vm.game.name" id="name">
+
             </md-input-container>
-            <md-input-container>
-              <label>Description</label>
-              <textarea required type="text" ng-model="ustory.description"></textarea>
-            </md-input-container>
-          </div>
-          <div layout="row" layout-align="end center">
-            <md-button class="md-fab md-mini material-icons md-warn" aria-label="Add User Story" ng-click="removeUstory($index)">remove
-              <md-tooltip md-direction="left">
-                Remove
-              </md-tooltip>
-            </md-button>
-          </div>
-        </md-whiteframe>
+            <br>
+            <label>Players:</label>
+            <br>
 
-        <md-whiteframe class="md-whiteframe-5dp ustory">
-          <div layout="column">
-            <md-input-container>
-              <label>Name</label>
-              <input name="ustory-name" type="text" id="ustory-name" ng-model="ustoryname">
-            </md-input-container>
-            <md-input-container>
-              <label>Description</label>
-              <textarea name="ustory-description" type="text" id="ustory-description" ng-model="ustorydescription"></textarea>
-            </md-input-container>
-          </div>
-          <div layout="row" layout-align="end center">
-            <md-button class="md-fab md-mini material-icons" aria-label="Add User Story" ng-click="addUstory()">add
-              <md-tooltip md-direction="left">
-                Add
-              </md-tooltip>
-            </md-button>
-          </div>
-        </md-whiteframe>
+            <md-content class="md-padding autocomplete" layout="column">
+
+                <md-contact-chips ng-model="vm.selectedPlayers" md-contacts="vm.delayedQuerySearch($query)" md-contact-name="username" md-contact-image="profileImageURL" md-contact-email="email" md-require-match="true" md-highlight-flags="i" filter-selected="vm.filterSelected"
+                    placeholder="Add Players" secondary-placeholder="Add more Players">
+                </md-contact-chips>
+            </md-content>
+
+            <div>
+                <!-- data-ng-controller="UstoriesController" -->
+                <!-- your view content -->
+                <label>User stories:</label>
+
+                <div layout="row" layout-padding layout-wrap layout-fill>
 
 
-        </div>
-
-        </div>
 
 
-        <div layout="row" layout-align="space-between center">
-          <md-button class="md-raised md-warn" ui-sref="games.list" ui-sref-active="active">Cancel</md-button>
-          <md-button class="md-raised md-accent" type="submit">{{vm.game._id ? 'Update' : 'Create'}}</md-button>
-        </div>
-        <div ng-show="vm.error" class="text-danger">
-          <strong ng-bind="vm.error"></strong>
-        </div>
-      </fieldset>
-    </form>
-  </div>
+                    <md-whiteframe class="md-whiteframe-5dp ustory" ng-repeat="ustory in ustories">
+                        <div layout="column">
+                            <md-input-container>
+                                <label>Name</label>
+                                <input required type="text" ng-model="ustory.name">
+                            </md-input-container>
+                            <md-input-container>
+                                <label>Description</label>
+                                <textarea required type="text" ng-model="ustory.description"></textarea>
+                            </md-input-container>
+                        </div>
+                        <div layout="row" layout-align="end center">
+                            <md-button class="md-fab md-mini material-icons md-warn" aria-label="Add User Story" ng-click="removeUstory($index)">remove
+                                <md-tooltip md-direction="left">
+                                    Remove
+                                </md-tooltip>
+                            </md-button>
+                        </div>
+                    </md-whiteframe>
+
+                    <md-whiteframe class="md-whiteframe-5dp ustory">
+                        <div layout="column">
+                            <md-input-container>
+                                <label>Name</label>
+                                <input name="ustory-name" type="text" id="ustory-name" ng-model="ustoryname">
+                            </md-input-container>
+                            <md-input-container>
+                                <label>Description</label>
+                                <textarea name="ustory-description" type="text" id="ustory-description" ng-model="ustorydescription"></textarea>
+                            </md-input-container>
+                        </div>
+                        <div layout="row" layout-align="end center">
+                            <md-button class="md-fab material-icons" aria-label="Add User Story" ng-click="addUstory()">add
+                                <md-tooltip md-direction="left">
+                                    Add
+                                </md-tooltip>
+                            </md-button>
+                        </div>
+                    </md-whiteframe>
+
+
+                </div>
+
+            </div>
+
+
+            <div layout="row" layout-align="space-between center">
+                <md-button class="md-raised md-warn" ui-sref="games.list" ui-sref-active="active">Cancel</md-button>
+                <md-button class="md-raised md-accent" type="submit">{{vm.game._id ? 'Update' : 'Create'}}</md-button>
+            </div>
+            <div ng-show="vm.error" class="text-danger">
+                <strong ng-bind="vm.error"></strong>
+            </div>
+            </fieldset>
+        </form>
+    </div>
 </section>
